--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,7 +6,7 @@
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
-
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
 <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}} Details</h2>
@@ -18,3 +18,4 @@
   </div>
 
 </div>
+
